# Frutiger-Drop

./: Cargo.toml  LICENSE  README.md
.github/workflows/: dotnet.yml  js.yml  python.yml  rust.yml
bindings/dotnet/: FrutigerDrop.csproj
bindings/dotnet/src/: FrutigerDrop.cs
bindings/js/: build.js  package-lock.json  package.json
bindings/js/src/: index.js
bindings/js/wasm/: Cargo.toml
bindings/js/wasm/src/: lib.rs
bindings/python/: Cargo.toml  README.md  build.rs  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/src/frutiger_drop/: __init__.py
core/: Cargo.toml
core/src/: lib.rs
